style changes on business dash, overflow fix, added delete location

--- a/scss/addLocation.scss
+++ b/scss/addLocation.scss
@@ -39,7 +39,7 @@ Styles for the location addition form
     align-items: center;
 
     .MuiFormLabel-root.Mui-focused{
-      color: $button-green;
+      color: $bg-green;
     }
 
     #addLocation-smalls{
